Agregar estilos y estructura para el explorador de archivos y la mini barra lateral en el componente VSC, mejorando la navegación y la experiencia del usuario.

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@
   align-items: center;
 }
 
+.borderR {
+  margin-right: 13px;
+}
+
 .btw {
   justify-content: space-between;
   align-items: center;
