--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -10,6 +10,15 @@
     padding:10px;
     box-sizing: border-box;
     list-style: none;
+
+    border-radius: 20px;
+  background: linear-gradient(
+    170deg,
+    rgba(58, 56, 56, 0.623) 0%,
+    rgb(31, 31, 31) 100%
+  );
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.55);
+  padding: 5px;
 }
 
 .boxskills > li {
@@ -28,5 +37,6 @@
 
 .boxskills > li > p {
     font-size: 15px;
+    
 }
 
