--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,12 @@ body {
   margin: 0;
   padding: 5px;
   font-family: inherit;
+  background-image: url("./images/fondoDev.png"); /* ruta a tu imagen */
+  background-repeat: repeat-y;          /* se repite solo hacia abajo */
+  background-position: center top;      /* centrado horizontalmente */
+  background-attachment: scroll;        /* se mueve con el scroll */
+  background-size: contain;             /* mantiene proporciones */
+  background-color: #ffffff;            /* color base detrás */
+  margin: 0;
+  padding: 0;
 }
