--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -92,7 +92,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  width: 1100px;
+  width: 100%;
+  max-width: 1100px;
   height: 100%;
   padding: 10px;
   box-sizing: border-box;
