--- a/src/components/VSC/VSC.css
+++ b/src/components/VSC/VSC.css
@@ -13,7 +13,7 @@
 /* ==== BARRA DE TÍTULO ==== */
 .titleVSC {
   width: 100%;
-  padding: 6px 10px;
+  /* padding: 6px 10px; */
   font-size: 16px;
   font-family: Georgia, "Times New Roman", Times, serif;
   display: flex;
