--- a/src/components/ProyectosCarousel/ProyectosCarousel.css
+++ b/src/components/ProyectosCarousel/ProyectosCarousel.css
@@ -2,6 +2,9 @@
    CONTENEDOR GENERAL
 ============================= */
 .proyectos-carousel-container {
+  overflow: hidden;        /* oculta el desplazamiento lateral */
+  width: 100%;             /* asegura que no exceda el viewport */
+  max-width: 100vw;        /* opcional, por seguridad */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -165,6 +168,16 @@
 /* =============================
    SWIPER (paginación y flechas)
 ============================= */
+.swiper {
+  width: 100%;
+  height: auto;
+}
+
+.swiper-wrapper {
+  will-change: transform;
+}
+
+
 .swiper-pagination-bullet {
   height: 12px;
   width: 12px;
