--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,22 @@
   color: #9fd86b;
 }
 
+.App {
+  width: 100%;
+  max-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+.paddingApp {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
 .Body2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
