--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
+html {
+  box-sizing: border-box;
+  width: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
   margin: 0;
   /* padding: 5px; */
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   font-family: inherit;
   background-image: url("./images/fondoTextura.png"); /* ruta a tu imagen */
   background-repeat: repeat;
@@ -16,7 +28,9 @@ body {
   padding: 0;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
+  max-width: 100%;
 }
 
