--- a/src/components/VSC/VSC.css
+++ b/src/components/VSC/VSC.css
@@ -15,7 +15,7 @@
 /* ==== BARRA DE TÍTULO ==== */
 .titleVSC {
   width: 100%;
-  /* padding: 6px 10px; */
+  padding: 6px 0 6px 0;
   font-size: 16px;
   font-family: Georgia, "Times New Roman", Times, serif;
   display: flex;
