--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,10 @@
   width: 40%;
 }
 
+.fontTitle {
+  font-size: 50px;
+}
+
 /* BUTTON */
 
 .myBtn {
@@ -222,3 +226,8 @@
 }
 
 /* ---------------------------------------------------------------------- */
+@media (max-width: 768px) {
+  .fontTitle {
+  font-size: 40px;
+  }
+}
